Remove 'Install' section, modifiy 'Using' section

--- a/app/assets/stylesheets/sass/style.sass
+++ b/app/assets/stylesheets/sass/style.sass
@@ -127,7 +127,7 @@
   max-height: 100%
   position: relative
 
-  background: url(images/ruy_line_guides.svg) center center no-repeat fixed
+  background: url(../images/ruy_line_guides.svg) center center no-repeat fixed
 
   @media #{$landscape}
     background-size: auto 1000px
