--- a/app/views/home/why.jade
+++ b/app/views/home/why.jade
@@ -7,14 +7,11 @@ section#why.SectionWay
             | Why Ruy
           .SectionWay-description-paragraph
             p.SectionWay-description-paragraph-text
-              | Ruy is a rules engine built for detecting when certain conditions obtain,
-              | and what events (or outcomes) should be trigger when they do.
+              | Ruy is a library for defining a set of conditions and evaluating them
+              | against a context.
             p.SectionWay-description-paragraph-text
-              | A Ruy ruleset is a combination of rules that check for
-              | conditions and result in zero or more outcomes.
-            p.SectionWay-description-paragraph-text
-              | Rulesets are loaded from an adapter that lets developers specify
-              | how to persist and store their rules arbitrarily.
+              | Rules are evaluated against a context (the Hash being passed to #call)
+              | and return the first outcome that matches.
 
       .SectionWay-diagram
         .container-cell
