--- a/app/views/home/brand.jade
+++ b/app/views/home/brand.jade
@@ -2,7 +2,7 @@ section#brand.SectionBrand
   .container-cell
     .row
       .SectionBrand-moto
-        | Rules engine for ruby
+        | Ruy is a lightweight rules evaluator
       .SectionBrand-rubies
         .SectionBrand-rubies-layer.SectionBrand-rubies__1(class="parallax", data-velocity=".2")
         .SectionBrand-rubies-layer.SectionBrand-rubies__2(class="parallax", data-velocity=".4")
