--- a/app/views/home/why.jade
+++ b/app/views/home/why.jade
@@ -6,12 +6,23 @@ section#why.SectionWay
           h2.SectionWay-title
             | Why Ruy
           .SectionWay-description-paragraph
+
             p.SectionWay-description-paragraph-text
-              | Ruy is a library for defining a set of conditions and evaluating them
-              | against a context.
+              | Ruy defines an easy-to-learn language that allows
+              | to define conditional expressions and then evaluate
+              | them against a context.
             p.SectionWay-description-paragraph-text
-              | Rules are evaluated against a context (the Hash being passed to #call)
-              | and return the first outcome that matches.
+              | For example, it can determine
+              | the amount of miles earned by Alice when buying $400 with
+              | her credit card during the Black Friday.
+            p.SectionWay-description-paragraph-text
+              | In this case Alice wins 1000 miles.
+            br
+            p.SectionWay-description-paragraph-text
+              strong Uses
+            p.SectionWay-description-paragraph-text
+              | It can be used to build a rules engine tailored to the needs of a small-midle business.
+              | Can be used to obtain a outcome and do "something” like trigger events,
 
       .SectionWay-diagram
         .container-cell
