--- a/app/views/layout.jade
+++ b/app/views/layout.jade
@@ -2,7 +2,7 @@ doctype html
 html
   head
     title
-      | RUY - Rules engine for ruby
+      | RUY - Ruy is a lightweight rules evaluator
     meta(name='viewport', content='width=device-width, initial-scale=1')
     link(rel='stylesheet', href='dist/main.css')
     link(rel='icon', href='images/ruy.ico')
