--- a/app/assets/stylesheets/sass/style.sass
+++ b/app/assets/stylesheets/sass/style.sass
@@ -7,6 +7,7 @@
   @include grid-row($behavior: false)
   max-width: 100%
   max-height: rem-calc(756)
+  padding-top: 10em;
 
 .fork-top
   position: absolute
@@ -83,8 +84,6 @@
 .SectionWay
   @extend %SectionPages
 
-  &-title
-
   &-description
     display: table
     height: 100%
@@ -123,6 +122,7 @@
 
 .SectionBrand
   @extend %SectionPages
+  padding-top: 0
 
   max-height: 100%
   position: relative
@@ -210,6 +210,7 @@
     color: DimGray
     text-align: center
     position: absolute
+    line-height: 30px;
 
     @media #{$landscape}
       width: rem-calc(300)
@@ -224,6 +225,7 @@
       font-size: rem-calc(24)
 
     @media #{$medium-up}
+      line-height: 60px;
       top: calc(15%)
       font-size: rem-calc(60)
       left: calc(50% - 285px)
@@ -251,7 +253,7 @@
 
     @for $i from 1 to 4
       &__#{$i}
-        background-image: url('images/rubies-0#{$i}.png')
+        background-image: url('../images/rubies-0#{$i}.png')
 
 .SectionInstall
   @extend %SectionPages
