--- a/app/views/home/why.jade
+++ b/app/views/home/why.jade
@@ -6,23 +6,20 @@ section#why.SectionWay
           h2.SectionWay-title
             | Why Ruy
           .SectionWay-description-paragraph
-
             p.SectionWay-description-paragraph-text
-              | Ruy defines an easy-to-learn language that allows
-              | to define conditional expressions and then evaluate
-              | them against a context.
-            p.SectionWay-description-paragraph-text
-              | For example, it can determine
-              | the amount of miles earned by Alice when buying $400 with
-              | her credit card during the Black Friday.
-            p.SectionWay-description-paragraph-text
-              | In this case Alice wins 1000 miles.
+              | Ruy defines an easy-to-learn language which allows
+              | users to declare context-driven conditional expressions.
+              | For example, it may be used in determining the
+              | number of miles earned by Alice while shopping
+              | during Black Friday for a total of $400 via credit card,
+              | resulting in Alice being eligible for 1,000 miles.
             br
             p.SectionWay-description-paragraph-text
               strong Uses
             p.SectionWay-description-paragraph-text
-              | It can be used to build a rules engine tailored to the needs of a small-midle business.
-              | Can be used to obtain a outcome and do "something” like trigger events,
+              | Ruy may potentially be leveraged to build a tailored
+              | rules engine aimed to small/middle-size businesses.
+              | Besides, it may be used to model event triggers.
 
       .SectionWay-diagram
         .container-cell
